# Snorq

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
dashboard/: index.html  package.json
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: CandidateList.tsx  SignalGrid.tsx  VerdictCard.tsx
snorq/: __init__.py  models.py  scorer.py  signals.py  skill.py
snorq/utils/: __init__.py  helpers.py
tests/: conftest.py  test_helpers.py  test_models.py  test_scorer.py  test_signals.py  test_skill.py
