[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snorq"
version = "0.1.0"
description = "AI agent skill layer for PumpFun — scouts, scores, and decides on Solana token launches"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "snorqdev" }]
keywords = ["solana", "pumpfun", "ai-agent", "skill", "on-chain", "trading", "meme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snorq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
